src/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> function_decl
Rule 5     declaration -> struct_decl
Rule 6     declaration -> var_decl_stmt
Rule 7     function_decl -> FUNCION type ID PARIZQ param_list PARDER block
Rule 8     function_decl -> FUNCION type ID PARIZQ PARDER block
Rule 9     function_decl -> EXTERNO FUNCION type ID PARIZQ param_list PARDER PUNTOCOMA
Rule 10    function_decl -> EXTERNO FUNCION type ID PARIZQ PARDER PUNTOCOMA
Rule 11    param_list -> param_list COMA param
Rule 12    param_list -> param
Rule 13    param -> type ID
Rule 14    param -> type_base array_dims ID
Rule 15    struct_decl -> ESTRUCTURA ID LLAVEIZQ member_list LLAVEDER PUNTOCOMA
Rule 16    member_list -> member_list member
Rule 17    member_list -> member
Rule 18    member -> type ID PUNTOCOMA
Rule 19    member -> type_base array_dims ID PUNTOCOMA
Rule 20    var_decl_stmt -> var_decl PUNTOCOMA
Rule 21    var_decl -> type ID
Rule 22    var_decl -> type ID ASIGNAR expression
Rule 23    var_decl -> type_base array_dims ID
Rule 24    var_decl -> type_base array_dims ID ASIGNAR expression
Rule 25    var_decl -> CONSTANTE type ID ASIGNAR expression
Rule 26    array_dims -> CORCHIZQ ENTERO CORCHDER
Rule 27    array_dims -> array_dims CORCHIZQ ENTERO CORCHDER
Rule 28    type -> type_base
Rule 29    type -> type MULT
Rule 30    type -> ID
Rule 31    type -> ID MULT
Rule 32    type_base -> VACIO
Rule 33    type_base -> ENTERO2
Rule 34    type_base -> ENTERO4
Rule 35    type_base -> ENTERO8
Rule 36    type_base -> TIPO_CARACTER
Rule 37    type_base -> TIPO_CADENA
Rule 38    type_base -> FLOTANTE
Rule 39    type_base -> DOBLE
Rule 40    type_base -> BOOLEANO
Rule 41    type_base -> CON_SIGNO
Rule 42    type_base -> SIN_SIGNO
Rule 43    statement -> var_decl_stmt
Rule 44    statement -> expr_stmt
Rule 45    statement -> if_stmt
Rule 46    statement -> while_stmt
Rule 47    statement -> for_stmt
Rule 48    statement -> return_stmt
Rule 49    statement -> break_stmt
Rule 50    statement -> continue_stmt
Rule 51    statement -> print_stmt
Rule 52    statement -> block
Rule 53    block -> LLAVEIZQ statement_list LLAVEDER
Rule 54    block -> LLAVEIZQ LLAVEDER
Rule 55    statement_list -> statement_list statement
Rule 56    statement_list -> statement
Rule 57    expr_stmt -> expression PUNTOCOMA
Rule 58    expr_stmt -> PUNTOCOMA
Rule 59    if_stmt -> SI PARIZQ expression PARDER statement
Rule 60    if_stmt -> SI PARIZQ expression PARDER statement elif_list
Rule 61    if_stmt -> SI PARIZQ expression PARDER statement elif_list SI_NO statement
Rule 62    if_stmt -> SI PARIZQ expression PARDER statement SI_NO statement
Rule 63    elif_list -> elif_clause
Rule 64    elif_list -> elif_list elif_clause
Rule 65    elif_clause -> SI_NO_SI PARIZQ expression PARDER statement
Rule 66    while_stmt -> MIENTRAS PARIZQ expression PARDER statement
Rule 67    for_stmt -> PARA PARIZQ for_init_opt PUNTOCOMA expr_opt PUNTOCOMA expr_opt PARDER statement
Rule 68    for_init_opt -> var_decl
Rule 69    for_init_opt -> expression
Rule 70    for_init_opt -> empty
Rule 71    expr_opt -> expression
Rule 72    expr_opt -> empty
Rule 73    return_stmt -> RETORNAR expression PUNTOCOMA
Rule 74    return_stmt -> RETORNAR PUNTOCOMA
Rule 75    break_stmt -> ROMPER PUNTOCOMA
Rule 76    continue_stmt -> CONTINUAR PUNTOCOMA
Rule 77    print_stmt -> IMPRIMIR PARIZQ argument_list PARDER PUNTOCOMA
Rule 78    print_stmt -> IMPRIMIR PARIZQ PARDER PUNTOCOMA
Rule 79    expression -> assignment
Rule 80    assignment -> logical ASIGNAR assignment
Rule 81    assignment -> logical PLUSEQ assignment
Rule 82    assignment -> logical MINUSEQ assignment
Rule 83    assignment -> logical MULTEQ assignment
Rule 84    assignment -> logical DIVEQ assignment
Rule 85    assignment -> logical MODEQ assignment
Rule 86    assignment -> logical
Rule 87    logical -> logical ORLOG logical_and
Rule 88    logical -> logical_and
Rule 89    logical_and -> logical_and ANDLOG bitwise_or
Rule 90    logical_and -> bitwise_or
Rule 91    bitwise_or -> bitwise_or OR bitwise_xor
Rule 92    bitwise_or -> bitwise_xor
Rule 93    bitwise_xor -> bitwise_xor XOR bitwise_and
Rule 94    bitwise_xor -> bitwise_and
Rule 95    bitwise_and -> bitwise_and AND equality
Rule 96    bitwise_and -> equality
Rule 97    equality -> equality IGUAL relational
Rule 98    equality -> equality DISTINTO relational
Rule 99    equality -> relational
Rule 100   relational -> relational MENOR additive
Rule 101   relational -> relational MENORIGUAL additive
Rule 102   relational -> relational MAYOR additive
Rule 103   relational -> relational MAYORIGUAL additive
Rule 104   relational -> additive
Rule 105   additive -> additive MAS multiplicative
Rule 106   additive -> additive MENOS multiplicative
Rule 107   additive -> multiplicative
Rule 108   multiplicative -> multiplicative MULT unary
Rule 109   multiplicative -> multiplicative DIV unary
Rule 110   multiplicative -> multiplicative MOD unary
Rule 111   multiplicative -> unary
Rule 112   unary -> NOT unary
Rule 113   unary -> MENOS unary
Rule 114   unary -> PLUSPLUS unary
Rule 115   unary -> MINUSMINUS unary
Rule 116   unary -> MULT unary
Rule 117   unary -> AND unary
Rule 118   unary -> postfix
Rule 119   postfix -> postfix PLUSPLUS
Rule 120   postfix -> postfix MINUSMINUS
Rule 121   postfix -> postfix PUNTO ID
Rule 122   postfix -> postfix FLECHA ID
Rule 123   postfix -> postfix CORCHIZQ expression CORCHDER
Rule 124   postfix -> postfix PARIZQ argument_list PARDER
Rule 125   postfix -> postfix PARIZQ PARDER
Rule 126   postfix -> primary
Rule 127   argument_list -> argument_list COMA expression
Rule 128   argument_list -> expression
Rule 129   primary -> ID
Rule 130   primary -> ENTERO
Rule 131   primary -> FLOT
Rule 132   primary -> CARACTER
Rule 133   primary -> CADENA
Rule 134   primary -> PARIZQ expression PARDER
Rule 135   primary -> new_expr
Rule 136   primary -> delete_expr
Rule 137   new_expr -> NUEVO type
Rule 138   delete_expr -> ELIMINAR unary
Rule 139   empty -> <empty>

Terminals, with rules where they appear

AND                  : 95 117
ANDLOG               : 89
ASIGNAR              : 22 24 25 80
BOOLEANO             : 40
CADENA               : 133
CARACTER             : 132
COMA                 : 11 127
CONSTANTE            : 25
CONTINUAR            : 76
CON_SIGNO            : 41
CORCHDER             : 26 27 123
CORCHIZQ             : 26 27 123
DISTINTO             : 98
DIV                  : 109
DIVEQ                : 84
DOBLE                : 39
ELIMINAR             : 138
ENTERO               : 26 27 130
ENTERO2              : 33
ENTERO4              : 34
ENTERO8              : 35
ESTRUCTURA           : 15
EXTERNO              : 9 10
FLECHA               : 122
FLOT                 : 131
FLOTANTE             : 38
FUNCION              : 7 8 9 10
ID                   : 7 8 9 10 13 14 15 18 19 21 22 23 24 25 30 31 121 122 129
IGUAL                : 97
IMPRIMIR             : 77 78
LLAVEDER             : 15 53 54
LLAVEIZQ             : 15 53 54
MAS                  : 105
MAYOR                : 102
MAYORIGUAL           : 103
MENOR                : 100
MENORIGUAL           : 101
MENOS                : 106 113
MIENTRAS             : 66
MINUSEQ              : 82
MINUSMINUS           : 115 120
MOD                  : 110
MODEQ                : 85
MULT                 : 29 31 108 116
MULTEQ               : 83
NOT                  : 112
NUEVO                : 137
OR                   : 91
ORLOG                : 87
PARA                 : 67
PARDER               : 7 8 9 10 59 60 61 62 65 66 67 77 78 124 125 134
PARIZQ               : 7 8 9 10 59 60 61 62 65 66 67 77 78 124 125 134
PLUSEQ               : 81
PLUSPLUS             : 114 119
PUNTO                : 121
PUNTOCOMA            : 9 10 15 18 19 20 57 58 67 67 73 74 75 76 77 78
RETORNAR             : 73 74
ROMPER               : 75
SI                   : 59 60 61 62
SIN_SIGNO            : 42
SI_NO                : 61 62
SI_NO_SI             : 65
TIPO_CADENA          : 37
TIPO_CARACTER        : 36
VACIO                : 32
XOR                  : 93
error                : 

Nonterminals, with rules where they appear

additive             : 100 101 102 103 104 105 106
argument_list        : 77 124 127
array_dims           : 14 19 23 24 27
assignment           : 79 80 81 82 83 84 85
bitwise_and          : 93 94 95
bitwise_or           : 89 90 91
bitwise_xor          : 91 92 93
block                : 7 8 52
break_stmt           : 49
continue_stmt        : 50
declaration          : 2 3
declaration_list     : 1 2
delete_expr          : 136
elif_clause          : 63 64
elif_list            : 60 61 64
empty                : 70 72
equality             : 95 96 97 98
expr_opt             : 67 67
expr_stmt            : 44
expression           : 22 24 25 57 59 60 61 62 65 66 69 71 73 123 127 128 134
for_init_opt         : 67
for_stmt             : 47
function_decl        : 4
if_stmt              : 45
logical              : 80 81 82 83 84 85 86 87
logical_and          : 87 88 89
member               : 16 17
member_list          : 15 16
multiplicative       : 105 106 107 108 109 110
new_expr             : 135
param                : 11 12
param_list           : 7 9 11
postfix              : 118 119 120 121 122 123 124 125
primary              : 126
print_stmt           : 51
program              : 0
relational           : 97 98 99 100 101 102 103
return_stmt          : 48
statement            : 55 56 59 60 61 61 62 62 65 66 67
statement_list       : 53 55
struct_decl          : 5
type                 : 7 8 9 10 13 18 21 22 25 29 137
type_base            : 14 19 23 24 28
unary                : 108 109 110 111 112 113 114 115 116 117 138
var_decl             : 20 68
var_decl_stmt        : 6 43
while_stmt           : 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . function_decl
    (5) declaration -> . struct_decl
    (6) declaration -> . var_decl_stmt
    (7) function_decl -> . FUNCION type ID PARIZQ param_list PARDER block
    (8) function_decl -> . FUNCION type ID PARIZQ PARDER block
    (9) function_decl -> . EXTERNO FUNCION type ID PARIZQ param_list PARDER PUNTOCOMA
    (10) function_decl -> . EXTERNO FUNCION type ID PARIZQ PARDER PUNTOCOMA
    (15) struct_decl -> . ESTRUCTURA ID LLAVEIZQ member_list LLAVEDER PUNTOCOMA
    (20) var_decl_stmt -> . var_decl PUNTOCOMA
    (21) var_decl -> . type ID
    (22) var_decl -> . type ID ASIGNAR expression
    (23) var_decl -> . type_base array_dims ID
    (24) var_decl -> . type_base array_dims ID ASIGNAR expression
    (25) var_decl -> . CONSTANTE type ID ASIGNAR expression
    (28) type -> . type_base
    (29) type -> . type MULT
    (30) type -> . ID
    (31) type -> . ID MULT
    (32) type_base -> . VACIO
    (33) type_base -> . ENTERO2
    (34) type_base -> . ENTERO4
    (35) type_base -> . ENTERO8
    (36) type_base -> . TIPO_CARACTER
    (37) type_base -> . TIPO_CADENA
    (38) type_base -> . FLOTANTE
    (39) type_base -> . DOBLE
    (40) type_base -> . BOOLEANO
    (41) type_base -> . CON_SIGNO
    (42) type_base -> . SIN_SIGNO

    FUNCION         shift and go to state 7
    EXTERNO         shift and go to state 10
    ESTRUCTURA      shift and go to state 11
    CONSTANTE       shift and go to state 14
    ID              shift and go to state 9
    VACIO           shift and go to state 15
    ENTERO2         shift and go to state 16
    ENTERO4         shift and go to state 17
    ENTERO8         shift and go to state 18
    TIPO_CARACTER   shift and go to state 19
    TIPO_CADENA     shift and go to state 20
    FLOTANTE        shift and go to state 21
    DOBLE           shift and go to state 22
    BOOLEANO        shift and go to state 23
    CON_SIGNO       shift and go to state 24
    SIN_SIGNO       shift and go to state 25

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    function_decl                  shift and go to state 4
    struct_decl                    shift and go to state 5
    var_decl_stmt                  shift and go to state 6
    type                           shift and go to state 8
    var_decl                       shift and go to state 12
    type_base                      shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . function_decl
    (5) declaration -> . struct_decl
    (6) declaration -> . var_decl_stmt
    (7) function_decl -> . FUNCION type ID PARIZQ param_list PARDER block
    (8) function_decl -> . FUNCION type ID PARIZQ PARDER block
    (9) function_decl -> . EXTERNO FUNCION type ID PARIZQ param_list PARDER PUNTOCOMA
    (10) function_decl -> . EXTERNO FUNCION type ID PARIZQ PARDER PUNTOCOMA
    (15) struct_decl -> . ESTRUCTURA ID LLAVEIZQ member_list LLAVEDER PUNTOCOMA
    (20) var_decl_stmt -> . var_decl PUNTOCOMA
    (21) var_decl -> . type ID
    (22) var_decl -> . type ID ASIGNAR expression
    (23) var_decl -> . type_base array_dims ID
    (24) var_decl -> . type_base array_dims ID ASIGNAR expression
    (25) var_decl -> . CONSTANTE type ID ASIGNAR expression
    (28) type -> . type_base
    (29) type -> . type MULT
    (30) type -> . ID
    (31) type -> . ID MULT
    (32) type_base -> . VACIO
    (33) type_base -> . ENTERO2
    (34) type_base -> . ENTERO4
    (35) type_base -> . ENTERO8
    (36) type_base -> . TIPO_CARACTER
    (37) type_base -> . TIPO_CADENA
    (38) type_base -> . FLOTANTE
    (39) type_base -> . DOBLE
    (40) type_base -> . BOOLEANO
    (41) type_base -> . CON_SIGNO
    (42) type_base -> . SIN_SIGNO

    $end            reduce using rule 1 (program -> declaration_list .)
    FUNCION         shift and go to state 7
    EXTERNO         shift and go to state 10
    ESTRUCTURA      shift and go to state 11
    CONSTANTE       shift and go to state 14
    ID              shift and go to state 9
    VACIO           shift and go to state 15
    ENTERO2         shift and go to state 16
    ENTERO4         shift and go to state 17
    ENTERO8         shift and go to state 18
    TIPO_CARACTER   shift and go to state 19
    TIPO_CADENA     shift and go to state 20
    FLOTANTE        shift and go to state 21
    DOBLE           shift and go to state 22
    BOOLEANO        shift and go to state 23
    CON_SIGNO       shift and go to state 24
    SIN_SIGNO       shift and go to state 25

    declaration                    shift and go to state 26
    function_decl                  shift and go to state 4
    struct_decl                    shift and go to state 5
    var_decl_stmt                  shift and go to state 6
    type                           shift and go to state 8
    var_decl                       shift and go to state 12
    type_base                      shift and go to state 13

state 3

    (3) declaration_list -> declaration .

    FUNCION         reduce using rule 3 (declaration_list -> declaration .)
    EXTERNO         reduce using rule 3 (declaration_list -> declaration .)
    ESTRUCTURA      reduce using rule 3 (declaration_list -> declaration .)
    CONSTANTE       reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    VACIO           reduce using rule 3 (declaration_list -> declaration .)
    ENTERO2         reduce using rule 3 (declaration_list -> declaration .)
    ENTERO4         reduce using rule 3 (declaration_list -> declaration .)
    ENTERO8         reduce using rule 3 (declaration_list -> declaration .)
    TIPO_CARACTER   reduce using rule 3 (declaration_list -> declaration .)
    TIPO_CADENA     reduce using rule 3 (declaration_list -> declaration .)
    FLOTANTE        reduce using rule 3 (declaration_list -> declaration .)
    DOBLE           reduce using rule 3 (declaration_list -> declaration .)
    BOOLEANO        reduce using rule 3 (declaration_list -> declaration .)
    CON_SIGNO       reduce using rule 3 (declaration_list -> declaration .)
    SIN_SIGNO       reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> function_decl .

    FUNCION         reduce using rule 4 (declaration -> function_decl .)
    EXTERNO         reduce using rule 4 (declaration -> function_decl .)
    ESTRUCTURA      reduce using rule 4 (declaration -> function_decl .)
    CONSTANTE       reduce using rule 4 (declaration -> function_decl .)
    ID              reduce using rule 4 (declaration -> function_decl .)
    VACIO           reduce using rule 4 (declaration -> function_decl .)
    ENTERO2         reduce using rule 4 (declaration -> function_decl .)
    ENTERO4         reduce using rule 4 (declaration -> function_decl .)
    ENTERO8         reduce using rule 4 (declaration -> function_decl .)
    TIPO_CARACTER   reduce using rule 4 (declaration -> function_decl .)
    TIPO_CADENA     reduce using rule 4 (declaration -> function_decl .)
    FLOTANTE        reduce using rule 4 (declaration -> function_decl .)
    DOBLE           reduce using rule 4 (declaration -> function_decl .)
    BOOLEANO        reduce using rule 4 (declaration -> function_decl .)
    CON_SIGNO       reduce using rule 4 (declaration -> function_decl .)
    SIN_SIGNO       reduce using rule 4 (declaration -> function_decl .)
    $end            reduce using rule 4 (declaration -> function_decl .)


state 5

    (5) declaration -> struct_decl .

    FUNCION         reduce using rule 5 (declaration -> struct_decl .)
    EXTERNO         reduce using rule 5 (declaration -> struct_decl .)
    ESTRUCTURA      reduce using rule 5 (declaration -> struct_decl .)
    CONSTANTE       reduce using rule 5 (declaration -> struct_decl .)
    ID              reduce using rule 5 (declaration -> struct_decl .)
    VACIO           reduce using rule 5 (declaration -> struct_decl .)
    ENTERO2         reduce using rule 5 (declaration -> struct_decl .)
    ENTERO4         reduce using rule 5 (declaration -> struct_decl .)
    ENTERO8         reduce using rule 5 (declaration -> struct_decl .)
    TIPO_CARACTER   reduce using rule 5 (declaration -> struct_decl .)
    TIPO_CADENA     reduce using rule 5 (declaration -> struct_decl .)
    FLOTANTE        reduce using rule 5 (declaration -> struct_decl .)
    DOBLE           reduce using rule 5 (declaration -> struct_decl .)
    BOOLEANO        reduce using rule 5 (declaration -> struct_decl .)
    CON_SIGNO       reduce using rule 5 (declaration -> struct_decl .)
    SIN_SIGNO       reduce using rule 5 (declaration -> struct_decl .)
    $end            reduce using rule 5 (declaration -> struct_decl .)


state 6

    (6) declaration -> var_decl_stmt .

    FUNCION         reduce using rule 6 (declaration -> var_decl_stmt .)
    EXTERNO         reduce using rule 6 (declaration -> var_decl_stmt .)
    ESTRUCTURA      reduce using rule 6 (declaration -> var_decl_stmt .)
    CONSTANTE       reduce using rule 6 (declaration -> var_decl_stmt .)
    ID              reduce using rule 6 (declaration -> var_decl_stmt .)
    VACIO           reduce using rule 6 (declaration -> var_decl_stmt .)
    ENTERO2         reduce using rule 6 (declaration -> var_decl_stmt .)
    ENTERO4         reduce using rule 6 (declaration -> var_decl_stmt .)
    ENTERO8         reduce using rule 6 (declaration -> var_decl_stmt .)
    TIPO_CARACTER   reduce using rule 6 (declaration -> var_decl_stmt .)
    TIPO_CADENA     reduce using rule 6 (declaration -> var_decl_stmt .)
    FLOTANTE        reduce using rule 6 (declaration -> var_decl_stmt .)
    DOBLE           reduce using rule 6 (declaration -> var_decl_stmt .)
    BOOLEANO        reduce using rule 6 (declaration -> var_decl_stmt .)
    CON_SIGNO       reduce using rule 6 (declaration -> var_decl_stmt .)
    SIN_SIGNO       reduce using rule 6 (declaration -> var_decl_stmt .)
    $end            reduce using rule 6 (declaration -> var_decl_stmt .)


state 7

    (7) function_decl -> FUNCION . type ID PARIZQ param_list PARDER block
    (8) function_decl -> FUNCION . type ID PARIZQ PARDER block
    (28) type -> . type_base
    (29) type -> . type MULT
    (30) type -> . ID
    (31) type -> . ID MULT
    (32) type_base -> . VACIO
    (33) type_base -> . ENTERO2
    (34) type_base -> . ENTERO4
    (35) type_base -> . ENTERO8
    (36) type_base -> . TIPO_CARACTER
    (37) type_base -> . TIPO_CADENA
    (38) type_base -> . FLOTANTE
    (39) type_base -> . DOBLE
    (40) type_base -> . BOOLEANO
    (41) type_base -> . CON_SIGNO
    (42) type_base -> . SIN_SIGNO

    ID              shift and go to state 9
    VACIO           shift and go to state 15
    ENTERO2         shift and go to state 16
    ENTERO4         shift and go to state 17
    ENTERO8         shift and go to state 18
    TIPO_CARACTER   shift and go to state 19
    TIPO_CADENA     shift and go to state 20
    FLOTANTE        shift and go to state 21
    DOBLE           shift and go to state 22
    BOOLEANO        shift and go to state 23
    CON_SIGNO       shift and go to state 24
    SIN_SIGNO       shift and go to state 25

    type                           shift and go to state 27
    type_base                      shift and go to state 28

state 8

    (21) var_decl -> type . ID
    (22) var_decl -> type . ID ASIGNAR expression
    (29) type -> type . MULT

    ID              shift and go to state 29
    MULT            shift and go to state 30


state 9

    (30) type -> ID .
    (31) type -> ID . MULT

  ! shift/reduce conflict for MULT resolved as shift
    ID              reduce using rule 30 (type -> ID .)
    PLUSPLUS        reduce using rule 30 (type -> ID .)
    MINUSMINUS      reduce using rule 30 (type -> ID .)
    PUNTO           reduce using rule 30 (type -> ID .)
    FLECHA          reduce using rule 30 (type -> ID .)
    CORCHIZQ        reduce using rule 30 (type -> ID .)
    PARIZQ          reduce using rule 30 (type -> ID .)
    DIV             reduce using rule 30 (type -> ID .)
    MOD             reduce using rule 30 (type -> ID .)
    MAS             reduce using rule 30 (type -> ID .)
    MENOS           reduce using rule 30 (type -> ID .)
    MENOR           reduce using rule 30 (type -> ID .)
    MENORIGUAL      reduce using rule 30 (type -> ID .)
    MAYOR           reduce using rule 30 (type -> ID .)
    MAYORIGUAL      reduce using rule 30 (type -> ID .)
    IGUAL           reduce using rule 30 (type -> ID .)
    DISTINTO        reduce using rule 30 (type -> ID .)
    AND             reduce using rule 30 (type -> ID .)
    XOR             reduce using rule 30 (type -> ID .)
    OR              reduce using rule 30 (type -> ID .)
    ANDLOG          reduce using rule 30 (type -> ID .)
    ASIGNAR         reduce using rule 30 (type -> ID .)
    PLUSEQ          reduce using rule 30 (type -> ID .)
    MINUSEQ         reduce using rule 30 (type -> ID .)
    MULTEQ          reduce using rule 30 (type -> ID .)
    DIVEQ           reduce using rule 30 (type -> ID .)
    MODEQ           reduce using rule 30 (type -> ID .)
    ORLOG           reduce using rule 30 (type -> ID .)
    PUNTOCOMA       reduce using rule 30 (type -> ID .)
    PARDER          reduce using rule 30 (type -> ID .)
    CORCHDER        reduce using rule 30 (type -> ID .)
    COMA            reduce using rule 30 (type -> ID .)
    MULT            shift and go to state 31

  ! MULT            [ reduce using rule 30 (type -> ID .) ]


state 10

    (9) function_decl -> EXTERNO . FUNCION type ID PARIZQ param_list PARDER PUNTOCOMA
    (10) function_decl -> EXTERNO . FUNCION type ID PARIZQ PARDER PUNTOCOMA

    FUNCION         shift and go to state 32


state 11

    (15) struct_decl -> ESTRUCTURA . ID LLAVEIZQ member_list LLAVEDER PUNTOCOMA

    ID              shift and go to state 33


state 12

    (20) var_decl_stmt -> var_decl . PUNTOCOMA

    PUNTOCOMA       shift and go to state 34


state 13

    (23) var_decl -> type_base . array_dims ID
    (24) var_decl -> type_base . array_dims ID ASIGNAR expression
    (28) type -> type_base .
    (26) array_dims -> . CORCHIZQ ENTERO CORCHDER
    (27) array_dims -> . array_dims CORCHIZQ ENTERO CORCHDER

    ID              reduce using rule 28 (type -> type_base .)
    MULT            reduce using rule 28 (type -> type_base .)
    CORCHIZQ        shift and go to state 36

    array_dims                     shift and go to state 35

state 14

    (25) var_decl -> CONSTANTE . type ID ASIGNAR expression
    (28) type -> . type_base
    (29) type -> . type MULT
    (30) type -> . ID
    (31) type -> . ID MULT
    (32) type_base -> . VACIO
    (33) type_base -> . ENTERO2
    (34) type_base -> . ENTERO4
    (35) type_base -> . ENTERO8
    (36) type_base -> . TIPO_CARACTER
    (37) type_base -> . TIPO_CADENA
    (38) type_base -> . FLOTANTE
    (39) type_base -> . DOBLE
    (40) type_base -> . BOOLEANO
    (41) type_base -> . CON_SIGNO
    (42) type_base -> . SIN_SIGNO

    ID              shift and go to state 9
    VACIO           shift and go to state 15
    ENTERO2         shift and go to state 16
    ENTERO4         shift and go to state 17
    ENTERO8         shift and go to state 18
    TIPO_CARACTER   shift and go to state 19
    TIPO_CADENA     shift and go to state 20
    FLOTANTE        shift and go to state 21
    DOBLE           shift and go to state 22
    BOOLEANO        shift and go to state 23
    CON_SIGNO       shift and go to state 24
    SIN_SIGNO       shift and go to state 25

    type                           shift and go to state 37
    type_base                      shift and go to state 28

state 15

    (32) type_base -> VACIO .

    CORCHIZQ        reduce using rule 32 (type_base -> VACIO .)
    ID              reduce using rule 32 (type_base -> VACIO .)
    MULT            reduce using rule 32 (type_base -> VACIO .)
    PLUSPLUS        reduce using rule 32 (type_base -> VACIO .)
    MINUSMINUS      reduce using rule 32 (type_base -> VACIO .)
    PUNTO           reduce using rule 32 (type_base -> VACIO .)
    FLECHA          reduce using rule 32 (type_base -> VACIO .)
    PARIZQ          reduce using rule 32 (type_base -> VACIO .)
    DIV             reduce using rule 32 (type_base -> VACIO .)
    MOD             reduce using rule 32 (type_base -> VACIO .)
    MAS             reduce using rule 32 (type_base -> VACIO .)
    MENOS           reduce using rule 32 (type_base -> VACIO .)
    MENOR           reduce using rule 32 (type_base -> VACIO .)
    MENORIGUAL      reduce using rule 32 (type_base -> VACIO .)
    MAYOR           reduce using rule 32 (type_base -> VACIO .)
    MAYORIGUAL      reduce using rule 32 (type_base -> VACIO .)
    IGUAL           reduce using rule 32 (type_base -> VACIO .)
    DISTINTO        reduce using rule 32 (type_base -> VACIO .)
    AND             reduce using rule 32 (type_base -> VACIO .)
    XOR             reduce using rule 32 (type_base -> VACIO .)
    OR              reduce using rule 32 (type_base -> VACIO .)
    ANDLOG          reduce using rule 32 (type_base -> VACIO .)
    ASIGNAR         reduce using rule 32 (type_base -> VACIO .)
    PLUSEQ          reduce using rule 32 (type_base -> VACIO .)
    MINUSEQ         reduce using rule 32 (type_base -> VACIO .)
    MULTEQ          reduce using rule 32 (type_base -> VACIO .)
    DIVEQ           reduce using rule 32 (type_base -> VACIO .)
    MODEQ           reduce using rule 32 (type_base -> VACIO .)
    ORLOG           reduce using rule 32 (type_base -> VACIO .)
    PUNTOCOMA       reduce using rule 32 (type_base -> VACIO .)
    PARDER          reduce using rule 32 (type_base -> VACIO .)
    CORCHDER        reduce using rule 32 (type_base -> VACIO .)
    COMA            reduce using rule 32 (type_base -> VACIO .)


state 16

    (33) type_base -> ENTERO2 .

    CORCHIZQ        reduce using rule 33 (type_base -> ENTERO2 .)
    ID              reduce using rule 33 (type_base -> ENTERO2 .)
    MULT            reduce using rule 33 (type_base -> ENTERO2 .)
    PLUSPLUS        reduce using rule 33 (type_base -> ENTERO2 .)
    MINUSMINUS      reduce using rule 33 (type_base -> ENTERO2 .)
    PUNTO           reduce using rule 33 (type_base -> ENTERO2 .)
    FLECHA          reduce using rule 33 (type_base -> ENTERO2 .)
    PARIZQ          reduce using rule 33 (type_base -> ENTERO2 .)
    DIV             reduce using rule 33 (type_base -> ENTERO2 .)
    MOD             reduce using rule 33 (type_base -> ENTERO2 .)
    MAS             reduce using rule 33 (type_base -> ENTERO2 .)
    MENOS           reduce using rule 33 (type_base -> ENTERO2 .)
    MENOR           reduce using rule 33 (type_base -> ENTERO2 .)
    MENORIGUAL      reduce using rule 33 (type_base -> ENTERO2 .)
    MAYOR           reduce using rule 33 (type_base -> ENTERO2 .)
    MAYORIGUAL      reduce using rule 33 (type_base -> ENTERO2 .)
    IGUAL           reduce using rule 33 (type_base -> ENTERO2 .)
    DISTINTO        reduce using rule 33 (type_base -> ENTERO2 .)
    AND             reduce using rule 33 (type_base -> ENTERO2 .)
    XOR             reduce using rule 33 (type_base -> ENTERO2 .)
    OR              reduce using rule 33 (type_base -> ENTERO2 .)
    ANDLOG          reduce using rule 33 (type_base -> ENTERO2 .)
    ASIGNAR         reduce using rule 33 (type_base -> ENTERO2 .)
    PLUSEQ          reduce using rule 33 (type_base -> ENTERO2 .)
    MINUSEQ         reduce using rule 33 (type_base -> ENTERO2 .)
    MULTEQ          reduce using rule 33 (type_base -> ENTERO2 .)
    DIVEQ           reduce using rule 33 (type_base -> ENTERO2 .)
    MODEQ           reduce using rule 33 (type_base -> ENTERO2 .)
    ORLOG           reduce using rule 33 (type_base -> ENTERO2 .)
    PUNTOCOMA       reduce using rule 33 (type_base -> ENTERO2 .)
    PARDER          reduce using rule 33 (type_base -> ENTERO2 .)
    CORCHDER        reduce using rule 33 (type_base -> ENTERO2 .)
    COMA            reduce using rule 33 (type_base -> ENTERO2 .)


state 17

    (34) type_base -> ENTERO4 .
